--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "bunx --bun vite",
     "build": "bunx --bun vite build",
-    "lint": "biome lint ./src"
+    "check": "biome check ./src"
   },
   "devDependencies": {
     "@types/javascript-time-ago": "^2.0.8",
