--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "NODE_ENV=development bun run ./scripts/dev.ts",
     "build": "NODE_ENV=production bun run ./scripts/build.ts",
     "test": "bun run --filter=\"*\" test",
-    "lint": "bun run --filter=\"*\" lint",
+    "check": "bun run --filter=\"*\" check",
     "install-bin": "bun run --filter=\"@superstreamer/*\" install-bin"
   },
   "devDependencies": {
@@ -12,5 +12,10 @@
     "@changesets/cli": "^2.29.2",
     "check-dependency-version-consistency": "^5.0.0"
   },
-  "workspaces": ["apps/*", "packages/*", "extern/*"]
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "extern/*"
+  ],
+  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
 }
