--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
-    "lint": "biome lint ./src"
+    "check": "biome check ./src"
   },
   "devDependencies": {
     "@types/bun": "latest",
