--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "superstreamer",
   "scripts": {
+     "start": "react-scripts start",  
+  "eject": "react-scripts eject",
     "dev": "NODE_ENV=development bun run ./scripts/dev.ts",
     "build": "NODE_ENV=production bun run ./scripts/build.ts",
     "test": "bun run --filter=\"*\" test",
